# aoc2024

./: .gitignore  AoC2024.hs  Main.hs  README.md  answers.txt  aoc2024.cabal
src/AoC2024/: Interpolate.hs  Parser.hs  Utils.hs
src/AoC2024/Solutions/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/AoC2024/Utils/: PSQueue.hs
test/: Main.hs
